{
    "name": "IA_TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "7a8cd3d3-b784-4ea2-8ff2-d96351748002",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "6ae47fae-5a1c-482b-989a-65729079879e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "ebb30114-0118-42d6-ae10-1146542887d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "86d42dea-b0c3-49a9-8860-dd04ded89864",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b96d958-bfdc-4865-89c3-b6c651dbdc0b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f539427-6f0e-4eec-8a81-92dc1a28f927",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe4b987d-6adb-436c-9a83-7730cc1a0546",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}